# lab

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithm.h  test_matrix.c  test_matrix.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/array_set/: ordered_array_set.c  ordered_array_set.h  unordered_array_set.c  unordered_array_set.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: processing_string.c  processing_string.h  string_.c  string_.h
libs/data_structures/string/tasks/: 18test.c  18test.h  test_string_.c  test_string_.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
string/: CMakeLists.txt
string/tasks/: string_.c  string_.h
